applications/transformers/transformers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transformers-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transformers
  template:
    metadata:
      labels:
        app: transformers
    spec:
      containers:
      - name: transformers-web
        image: vndlovu/transformers-app
        ports:
          - containerPort: 8000
