applications/transformers/transformers-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transformers-service
spec:
  selector:
    app: transformers
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
