applications/transformers/transformers-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transformers-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: transformers.vuyisile.lan
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: transformers-service
                port:
                  number: 8000
